Fix moveit settings to match new xacro edo model and allow control of gazebo

--- a/config/joint_limits.yaml
+++ b/config/joint_limits.yaml
@@ -2,32 +2,32 @@
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  joint_1:
+  edo_joint_1:
     has_velocity_limits: false
     max_velocity: 0
     has_acceleration_limits: false
     max_acceleration: 0
-  joint_2:
+  edo_joint_2:
     has_velocity_limits: false
     max_velocity: 0
     has_acceleration_limits: false
     max_acceleration: 0
-  joint_3:
+  edo_joint_3:
     has_velocity_limits: false
     max_velocity: 0
     has_acceleration_limits: false
     max_acceleration: 0
-  joint_4:
+  edo_joint_4:
     has_velocity_limits: false
     max_velocity: 0
     has_acceleration_limits: false
     max_acceleration: 0
-  joint_5:
+  edo_joint_5:
     has_velocity_limits: false
     max_velocity: 0
     has_acceleration_limits: false
     max_acceleration: 0
-  joint_6:
+  edo_joint_6:
     has_velocity_limits: false
     max_velocity: 0
     has_acceleration_limits: false
